fixed comment icon wrapping below input field in edit timesheet

--- a/symfony/web/themes/default/css/main.css
+++ b/symfony/web/themes/default/css/main.css
@@ -1428,6 +1428,11 @@ input.timeBox {
 	float:left;
 }
 */
+div#edit-timesheet table.table tbody tr td {
+    white-space: nowrap;
+    min-width: 70px;
+}
+
 .editTimesheet table.table td {
     vertical-align: top;
 }
